# euphony-rs

./: .gitignore  Cargo.toml  README.md
_euphony-cli/: Cargo.toml
_euphony-cli/src/: composition.rs  midi.rs  play.rs  rng.rs
_euphony-lumina/: Cargo.toml
_euphony-lumina/src/: lib.rs
euphony/: Cargo.toml
euphony-buffer/: Cargo.toml
euphony-buffer/src/: decode.rs  hash.rs  lib.rs  resample.rs
euphony-build/: Cargo.toml
euphony-build/src/: buffer.rs  compile.scd  lib.rs  manifest.rs  synth.rs
euphony-cli/: Cargo.toml
euphony-cli/src/: build.rs  compile.rs  compiler.rs  disasm.rs  export.rs  gc.rs  lib.rs  logger.rs  main.rs  manifest.rs  play.rs  publish.rs  render.rs  serve.rs  time.rs  watcher.rs  workspace.rs
euphony-cli/src/play/: stream.rs  ui.rs
euphony-cli/src/workspace/: templates.rs
euphony-command/: Cargo.toml
euphony-command/src/: api.rs  codec.rs  handler.rs  lib.rs  message.rs  node.rs  reader.rs  tests.rs
euphony-compiler/: Cargo.toml
euphony-compiler/src/: buffer.rs  compiler.rs  group.rs  instruction.rs  lib.rs  midi.rs  node.rs  parallel.rs  render.rs  sample.rs  sink.rs  writer.rs
euphony-compiler/src/midi/: smf.rs
euphony-core/: Cargo.toml
euphony-core-macros/: Cargo.toml
euphony-core-macros/src/: command.rs  lib.rs
euphony-core/src/: lib.rs
euphony-core/src/pitch/: frequency.rs
euphony-core/src/ratio/: macros.rs  mod.rs
euphony-core/src/time/: beat.rs  time_signature.rs
euphony-dsp/: Cargo.toml
euphony-dsp/nodes/: Add.200.json  Mul.201.json  Phase.107.json  Pulse.103.json  Sawtooth.104.json  Silence.106.json  Sine.100.json  SineFast.101.json  SineFaster.102.json  Triangle.105.json  binary__Add.json  binary__Atan2.json  binary__Copysign.json  binary__Div.json  binary__DivEuclid.json  binary__Eq.json  binary__Gt.json  binary__Gte.json  binary__Hypot.json  binary__Log.json  binary__Lt.json  binary__Lte.json  binary__Max.json  binary__Min.json  binary__Mul.json  binary__Ne.json  binary__Powf.json  binary__Powi.json  binary__Rem.json  binary__RemEuclid.json  binary__Sub.json  buffer__Play.json  delay__Bus.json  delay__Delay.json  delay__Feedback.json  env__Linear.json  filter__Allpass.json  filter__Allpole.json  filter__Bandpass.json  filter__Bell.json  (+72 more)
euphony-dsp/src/: binary.rs  buffer.rs  delay.rs  env.rs  filter.rs  fun.rs  lib.rs  loader.rs  math.rs  nodes.rs  noise.rs  osc.rs  prelude.rs  sample.rs  signal.rs  tertiary.rs  unary.rs  zip.rs
euphony-dsp/src/buffer/: ext.rs
euphony-dsp/src/osc/: nes.rs  noise.rs  wave.rs
euphony-dsp/src/signal/: ext.rs  generator.rs
euphony-dsp/src/snapshots/: euphony_dsp__binary__Add.snap  euphony_dsp__binary__Atan2.snap  euphony_dsp__binary__Copysign.snap  euphony_dsp__binary__Div.snap  euphony_dsp__binary__DivEuclid.snap  euphony_dsp__binary__Eq.snap  euphony_dsp__binary__Gt.snap  euphony_dsp__binary__Gte.snap  euphony_dsp__binary__Hypot.snap  euphony_dsp__binary__Log.snap  euphony_dsp__binary__Lt.snap  euphony_dsp__binary__Lte.snap  euphony_dsp__binary__Max.snap  euphony_dsp__binary__Min.snap  euphony_dsp__binary__Mul.snap  euphony_dsp__binary__Ne.snap  euphony_dsp__binary__Powf.snap  euphony_dsp__binary__Powi.snap  euphony_dsp__binary__Rem.snap  euphony_dsp__binary__RemEuclid.snap  euphony_dsp__binary__Sub.snap  euphony_dsp__buffer__Play.snap  euphony_dsp__delay__Bus.snap  euphony_dsp__delay__Delay.snap  euphony_dsp__delay__Feedback.snap  euphony_dsp__delay__Read.snap  euphony_dsp__delay__Write.snap  euphony_dsp__delay__tests__delay_test.snap  euphony_dsp__delay__tests__feedback_test.snap  euphony_dsp__env__Lag.snap  euphony_dsp__env__Linear.snap  euphony_dsp__env__Select.snap  (+69 more)
euphony-graph/: Cargo.toml
euphony-graph/src/: lib.rs  tests.rs
euphony-live/: Cargo.toml
euphony-live/src/: cell.rs  connection.rs  event.rs  lib.rs  main.rs  timeline.rs  transform.rs
euphony-macros/: Cargo.toml
euphony-macros/src/: cents.rs  dispatch.rs  lib.rs  main_.rs  mode_system.rs  node.rs
euphony-midi/: Cargo.toml
euphony-midi/src/: channel.rs  codec.rs  controller.rs  integer.rs  key.rs  lib.rs  message.rs  notes.rs  pitch_bend.rs  pressure.rs  program.rs  song.rs  sysex.rs  timecode.rs  transpose.rs  velocity.rs
euphony-node/: Cargo.toml
euphony-node/src/: lib.rs  reflect.rs  sink.rs
euphony-nrt/: Cargo.toml
euphony-nrt/artifacts/: Makefile  nrtsine.synthdef  simple-sin.aif  simple-sin.osc  simple-sin.scd
euphony-nrt/src/: buffers.rs  bundle.rs  lib.rs  manifest.rs  multitrack.rs  render.rs  singletrack.rs  time.rs  track.rs
euphony-osc/: Cargo.toml
euphony-osc/src/: bundle.rs  lib.rs  types.rs
euphony-pattern/: Cargo.toml
euphony-pattern/src/: lib.rs  rng.rs  traits.rs
euphony-player/: Cargo.toml
euphony-player/src/: event.rs  main.rs  progress.rs  project.rs  timeline.rs
euphony-runtime/: Cargo.toml
euphony-runtime/src/: lib.rs  output.rs  rng.rs  time.rs
euphony-samples/: Cargo.toml  update
euphony-samples/src/: generator.rs  lib.rs  samples.rs  waveforms.rs
euphony-sc/: Cargo.toml
euphony-sc-core/: Cargo.toml  dump.scd
euphony-sc-core/artifacts/: simple-env.scd  simple_env.scsyndef
euphony-sc-core/src/: buffer.rs  codegen.rs  lib.rs  osc.rs  param.rs  project.rs  synthdef.rs  track.rs  ugen.rs
euphony-sc-macros/: Cargo.toml
euphony-sc-macros/src/: lib.rs
euphony-sc/src/: lib.rs  macro_support.rs  osc.rs  synthdef.rs
euphony-sc/tests/: synthdef.rs
euphony-scales/: Cargo.toml
euphony-scales/src/: main.rs  midi.rs
euphony-store/: Cargo.toml
euphony-store/src/: codec.rs  dc.rs  ext.rs  lib.rs  mix.rs  storage.rs  timeline.rs
euphony-testing/: Cargo.toml
euphony-testing/src/: lib.rs
euphony-testing/tests/: rand.rs  scheduler.rs  tempo.rs
euphony-units/: Cargo.toml
euphony-units/src/: coordinates.rs  lib.rs  zip.rs
euphony/src/: args.rs  buffer.rs  cell.rs  env.rs  ext.rs  group.rs  lib.rs  midi.rs  node.rs  output.rs  parameter.rs  pattern.rs  pitch.rs  prelude.rs  processor.rs  processors.rs  rand.rs  runtime.rs  section.rs  set.rs  sink.rs  synth.rs  tests.rs  time.rs  value.rs
euphony/tests/: api.rs
(+326 files in other folders)
