[package]
name = "euphony"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []
runtime = ["futures-core", "std", "generational-arena"]
serialize = ["serde"]

[dependencies]
euphony-macros = { version = "0.1", path = "./euphony-macros" }
futures-core = { version = "0.3", optional = true }
generational-arena = { version = "0.2", default-features = false, optional = true }
num-integer = { version = "0.1", default-features = false }
num-rational = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
ctrlc = "3.1"
insta = "0.12"
futures = { version = "0.3" }
midir = { git = "https://github.com/Boddlnagg/midir" }
midly = "0.3"
rand = "0.7"
