[workspace]
members = [
    "euphony-*",
    "euphony",
    "example-*",
]

#[profile.dev]
#debug = false
#debug-assertions = false
#
#[profile.dev.package."*"]
#opt-level = 3
#
#[profile.dev.build-override]
#opt-level = 3

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
