[package]
name = "euphony-buffer"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.13"
blake3 = "1"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = "0.5"
tempfile = "3"
