[package]
name = "euphony-buffer"
description = "buffer utilities for euphony applications"
version = "0.1.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["host"]
host = ["http", "resample", "decode"]
decode = ["symphonia"]
http = ["log", "reqwest"]
resample = ["rubato"]

[dependencies]
base64 = "0.13"
blake3 = "1"
euphony-command = { version = "0.1", path = "../euphony-command" }
log = { version = "0.4", optional = true }
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", optional = true }
tempfile = "3"
rubato = { version = "0.12", optional = true }

[dev-dependencies]
rubato = "0.12"
