[package]
name = "euphony-cli"
description = "Command line tool for managing euphony projects"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "euphony"
path = "src/main.rs"

[features]
default = ["remote"]
remote = ["tokio", "warp"]

[dependencies]
anyhow = "1"
arc-swap = "1"
cargo_metadata = "0.14"
crossterm = "0.23"
cpal = "0.13"
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-compiler = { version = "0.1", path = "../euphony-compiler", features = ["parallel"] }
euphony-mix = { version = "0.1", path = "../euphony-mix" }
euphony-store = { version = "0.1", path = "../euphony-store" }
futures = "0.3"
hound = "3"
notify = "4"
rayon = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", optional = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tui = "0.18"
warp = { version = "0.3", optional = true, default-features = false }
