[package]
name = "euphony-cli"
description = "Command line tool for managing euphony projects"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "euphony"
path = "src/main.rs"

[features]
default = ["play", "remote"]
play = ["cpal"]
remote = ["tokio", "warp"]

[dependencies]
anyhow = "1"
arc-swap = "1"
cargo_metadata = "0.15"
crossterm = "0.23"
cpal = { version = "0.14", optional = true }
env_logger = "0.9"
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-compiler = { version = "0.1", path = "../euphony-compiler", features = ["parallel"] }
euphony-mix = { version = "0.1", path = "../euphony-mix" }
euphony-store = { version = "0.1", path = "../euphony-store" }
futures = "0.3"
hound = "3"
log = "0.4"
notify = "4"
rayon = "1"
serde_json = "1"
structopt = "0.3"
toml_edit = "0.14"
tokio = { version = "1", optional = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tui = "0.18"
tui-logger = "0.8"
warp = { version = "0.3", optional = true, default-features = false }
