[package]
name = "euphony-compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
parallel = ["rayon", "euphony-graph/rayon"]

[dependencies]
blake3 = "1"
euphony-buffer = { version = "0.1", path = "../euphony-buffer", features = ["resample"] }
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-dsp = { version = "0.1", path = "../euphony-dsp" }
euphony-graph = { version = "0.1", path = "../euphony-graph" }
euphony-node = { version = "0.1", path = "../euphony-node" }
euphony-units = { version = "0.1", path = "../euphony-units" }
petgraph = "0.6"
rayon = { version = "1", optional = true }

[dev-dependencies]
bolero = "0.6"
rayon = "1"
