[package]
name = "euphony-compiler"
version = "0.1.1"
description = "compiler infrastructure for euphony compositions"
edition = "2021"
license = "MIT"

[features]
default = []
parallel = ["rayon", "euphony-graph/rayon"]

[dependencies]
blake3 = "1"
euphony-buffer = { version = "0.1", path = "../euphony-buffer" }
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-dsp = { version = "0.1", path = "../euphony-dsp" }
euphony-graph = { version = "0.1", path = "../euphony-graph" }
euphony-node = { version = "0.1", path = "../euphony-node" }
euphony-units = { version = "0.1", path = "../euphony-units" }
log = "0.4"
petgraph = "0.6"
rayon = { version = "1", optional = true }

[dev-dependencies]
bolero = "0.8"
rayon = "1"
