[package]
name = "euphony-dsp"
description = "implementation of euphony's signal processing nodes"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
ahash = "0.8"
dasp_sample = "0.11"
euphony-graph = { version = "0.1", path = "../euphony-graph" }
euphony-node = { version = "0.1", path = "../euphony-node" }
euphony-units = { version = "0.1", path = "../euphony-units" }
fastapprox = "0.3"
fundsp = { version = "0.12", default-features = false }
noise = "0.8"

[dev-dependencies]
euphony-node = { path = "../euphony-node", features = ["reflect"] }
insta = "1"
# TODO re-enable this once we get test for each processor
# plotters = { version = "0.3", default-features = false, features = ["point_series", "svg_backend"] }
