[package]
name = "euphony-graph"
description = "parallel graph computation framework"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
slotmap = { version = "1", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
bolero = "0.7"
rayon = "1"
