[package]
name = "euphony-live"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-broadcast = "0.5"
euphony = { version = "0.1", path = "../euphony" }
euphony-midi = { version = "0.1", path = "../euphony-midi" }
futures = { version = "0.3" }
midir = "0.9"
midly = { version = "0.5", default-features = false, features = ["std"] }
slotmap = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
insta = "1"
