[package]
name = "euphony-macros"
description = "Core macro implementations"
version = "0.2.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
num-rational = { version = "0.4", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
