[package]
name = "euphony-nrt"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
bach = "^0.0.2"
base64 = "0.13"
bytes = "0.5"
cfg-if = "1"
codec = { git = "https://github.com/camshaft/codec" }
dashmap = { version = "4", default-features = false, features = ["rayon"] }
euphony-osc = { version = "0.1", path = "../euphony-osc" }
euphony-runtime = { version = "0.1", path = "../euphony-runtime" }
euphony-sc = { version = "0.1", path = "../euphony-sc" }
flume = "0.10"
hash_hasher = "2"
lasso = { version = "0.5", features = ["multi-threaded"] }
lazy_static = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
sled = "0.34"

[dev-dependencies]
euphony-sc = { version = "0.1", path = "../euphony-sc" }
euphony-testing = { version = "0.1", path = "../euphony-testing" }
rosc = "0.4"
