[package]
name = "euphony-osc"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
bytes = { version = "0.5", default-features = false }
codec = { git = "https://github.com/camshaft/codec" }
euphony-osc-macros = { version = "0.1", path = "../euphony-osc-macros" }
