[package]
name = "euphony-pattern"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
euphony-core = { version = "0.1", path = "../euphony-core" }
num-integer = "0.1"
rand_core = "0.6"

[dev-dependencies]
insta = "1"
pretty_assertions = "0.7"
