[package]
name = "euphony-player"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
arc-swap = "1"
lru = "0.6"
notify = "4"
rodio = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
termion = "1"
tui = "0.14"
