[package]
name = "euphony-player"
description = "Multitrack audio player for the command line"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
arc-swap = "1"
lru = "0.6"
notify = "4"
rayon = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rodio = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sse-client = "1"
structopt = "0.3"
termion = "1"
tui = "0.14"
url = "2"
