[package]
name = "euphony-runtime"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
bach = { git = "https://github.com/camshaft/bach", branch = "main" }
euphony-core = { version = "0.1", path = "../euphony-core" }
euphony-sc = { version = "0.1", path = "../euphony-sc" }
flume = "0.10"
lazy_static = "1"
pin-project = "1"
rand = "0.8"
