[package]
name = "euphony-samples"
description = "easy-to-consume samples and waveforms for euphony applications"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
euphony-buffer = { version = "0.1", path = "../euphony-buffer", default-features = false }

[dev-dependencies]
blake3 = "1"
euphony-buffer = { version = "0.1", path = "../euphony-buffer", features = ["resample"] }
hound = "3"
rayon = "1"
rubato = "0.12"
