[package]
name = "euphony-sc-core"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[features]
codegen = ["heck", "proc-macro2", "quote", "syn"]

[dependencies]
codec = { git = "https://github.com/camshaft/codec" }
euphony-osc = { version = "0.1", path = "../euphony-osc" }
heck = { version = "0.3", optional = true }
once_cell = "1"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
smallvec = "1"
syn = { version = "1", optional = true, default-features = false }

[dev-dependencies]
insta = "1"
rosc = "0.4"
