[package]
name = "euphony-sc-macros"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
codec = { git = "https://github.com/camshaft/codec" }
euphony-sc-core = { version = "0.1", path = "../euphony-sc-core" }
heck = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
