[package]
name = "euphony-sc"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
codec = { git = "https://github.com/camshaft/codec" }
euphony-osc = { version = "0.1", path = "../euphony-osc" }

[dev-dependencies]
pretty_assertions = "0.6"
