[package]
name = "euphony-scales"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
ctrlc = "3.1"
dialoguer = "0.5"
euphony = { version = "0.1.0", path = "../" }
failure = "0.1"
futures = "0.3"
midir = { git = "https://github.com/Boddlnagg/midir" }
structopt = "0.3"
