[package]
name = "euphony-store"
version = "0.1.0"
edition = "2021"

[features]
default = ["codec-wave"]
codec-wave = ["hound"]

[dependencies]
base64 = "0.13"
blake3 = "1"
euphony-compiler = { version = "0.1", path = "../euphony-compiler" }
euphony-node = { version = "0.1", path = "../euphony-node" }
hound = { version = "3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"