[package]
name = "euphony-store"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
base64 = "0.13"
blake3 = "1"
euphony-compiler = { version = "0.1", path = "../euphony-compiler" }
euphony-mix = { version = "0.1", path = "../euphony-mix" }
euphony-node = { version = "0.1", path = "../euphony-node" }
euphony-units = { version = "0.1", path = "../euphony-units", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
