[package]
name = "euphony-store"
version = "0.1.1"
description = "storage component for rendered output"
edition = "2021"
license = "MIT"

[features]
default = []

[dependencies]
base64 = "0.13"
blake3 = "1"
euphony-compiler = { version = "0.1", path = "../euphony-compiler" }
euphony-mix = { version = "0.1", path = "../euphony-mix" }
euphony-node = { version = "0.1", path = "../euphony-node" }
euphony-units = { version = "0.1", path = "../euphony-units", features = ["std"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
