[package]
name = "euphony-testing"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
euphony = { path = "../euphony" }
insta = "1"

[[test]]
name = "rand"
harness = false
[[test]]
name = "scheduler"
harness = false
[[test]]
name = "tempo"
harness = false
