[package]
name = "euphony"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
bach = "=0.0.6"
euphony-buffer = { version = "0.1", path = "../euphony-buffer" }
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-macros = { version = "0.1", path = "../euphony-macros" }
euphony-samples = { version = "0.1", path = "../euphony-samples" }
euphony-units = { version = "0.1", path = "../euphony-units" }
futures = "0.3"
once_cell = "1"
pin-project = "1"
structopt = "0.3"

[dev-dependencies]
insta = "1"
euphony-node = { version = "0.1", path = "../euphony-node", features = ["reflect"] }
