[package]
name = "euphony"
description = "music composition environment for programmers"
version = "0.1.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
bach = "=0.0.6"
euphony-buffer = { version = "0.1", path = "../euphony-buffer", default-features = false }
euphony-command = { version = "0.1", path = "../euphony-command" }
euphony-macros = { version = "0.2", path = "../euphony-macros" }
euphony-samples = { version = "0.1", path = "../euphony-samples" }
euphony-units = { version = "0.1", path = "../euphony-units" }
futures = "0.3"
midly = { version = "0.5", default-features = false, features = ["std"] }
once_cell = "1"
pin-project = "1"
rand = { version = "0.8", default-features = false }

[dev-dependencies]
insta = "1"
euphony-node = { version = "0.1", path = "../euphony-node", features = ["reflect"] }
